--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"cd backend && node server.js"
+    "start": "cd backend && node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,9 +18,9 @@
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.2",
     "router": "^1.3.8"
   },
-  "devDependencies": {},
   "description": ""
 }
